--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="popup-background hide">
+    <div class="popup-body">
+      <div class="popup-heading">
+        <h1 class="popup-title">Game Over</h1>
+      </div>
+      <div class="popup-buttons">
+        <button class="popup-button popup-replay">Replay</button>
+      </div>
+    </div>
+  </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
