--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <section class="score-panel">
+    <span class="clock">0:00</span> Game Timer
+  </section>
   <div class="popup-background hide">
     <div class="popup-body">
       <div class="popup-heading">
         <h1 class="popup-title">Game Over</h1>
+      </div>
+      <div class="popup-stats">
+        <span class="popup-time">Time =</span>
       </div>
       <div class="popup-buttons">
         <button class="popup-button popup-replay">Replay</button>
