--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section class="score-panel">
-    <span class="clock">0:00</span> Game Timer
+    <span class="clock">0:00 </span> &nbsp; Game Timer
   </section>
   <div class="popup-background hide">
     <div class="popup-body">
